Some slight style changes and fixing something broken in the last commit.

--- a/binbogami/static/style.css
+++ b/binbogami/static/style.css
@@ -79,3 +79,11 @@ body {
 .podcast-image img {
 	height: 100px;
 }
+
+a, a:hover, a:visited, a:active {
+	color: #005C1F;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
